<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


  <!--OS-->
  <string name="os_device" translatable="false">Android</string>
  <!--Content Provider-->
  <string name="content_authority" translatable="false">com.dbbest.amateurfeed.app</string>
  <string name="app_name">Amateurfeed</string>

  <!--File Provider-->
  <string name="file_provider_authority" translatable="false">com.dbbest.amateurfeed.provider</string>

  <!-- SyncAdapter related -->
  <string name="sync_account_type" translatable="false">com.dbbest.amateurfeed</string>

  <!--Google Map-->
  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBo08owLuBT5YewWZlocnZzIRgelXQIWbw</string>

  <!--Login Screen-->
  <string name="ok_button">OK</string>
  <string name="link_sign_up_screen"><u>Sign up</u></string>
  <string name="login">E-mail</string>
  <string name="login_text" translatable="false">tonychka1684@mail.ru</string>
  <string name="password_text" translatable="false">123456a</string>

  <string name="label_sign_up">If you do not registered</string>
  <string name="label_toolbar_login_in">Login in</string>

  <!--Sign Up Screen-->
  <string name="label_already_sign_up">Already have en account? </string>
  <string name="link_login_screen"><u>Login In</u></string>

  <string name="label_toolbar_sign_up">Sign Up</string>
  <string name="sign_up_button">Registrate</string>

  <string name="fullName">Name (required)</string>
  <string name="phone">Phone</string>
  <string name="address">Address</string>
  <string name="password">Password</string>
  <string name="password_required">Password (required)</string>
  <string name="email_required">Email (required)</string>


  <!--Forgot Password-->
  <string name="label_toolbar_forgot_password">Reset Password</string>
  <string name="error_dialog_reset_password">Password was not reseted. \n Check e-mail!</string>
  <string name="info_dialog_reset_password">Old Password was reseted. \n On your e-mail will be sent new Password</string>
  <string name="label_reset_password">If you forgot password </string>
  <string name="link_reset_password_screen"> <u>Forgot password</u> </string>
  <string name="reset_button">Reset</string>

  <!--Setting Screen-->
  <string name="label_activity_settings">Settings</string>
  <string name="checkbox_preference" translatable="false">checkbox_preference</string>

  <!--Dialog-->
  <string name="cancel">Cancel</string>
  <string name="ok" tools:ignore="Typos">OK</string>

  <!--Profile-->
  <string name="profile_toolbar_label">Profile</string>
  <string name="my_item_status_label">Status: </string>
  <string name="my_item_amount_likes">Amount Likes: </string>

  <!--My News Items-->
  <string name="my_news_toolbar_label">My News</string>

  <!--Feed-->
  <string name="feed_toolbar_label">News</string>
  <string name="count_item" translatable="false">1</string>

  <!--Search-->
  <string name="search_toolbar_label">Search</string>

  <!--Preference-->
  <string name="preference_toolbar_label">Settings</string>
  <string name="title_intent_edit_profile">Edit Profile</string>
  <string name="title_intent_change_password">Change Password</string>
  <string name="title_intent_logout">Logout</string>
  <string name="startEditProfile" translatable="false">startEditProfile</string>
  <string name="startChangePassword" translatable="false">startChangePassword</string>
  <string name="startLogout" translatable="false">logout</string>
  <string name="notifier_push">Check Push Notification</string>

  <!--Edit Profile Screen-->
  <string name="edit_profile_toolbar_label">Edit Profile</string>
  <string name="edit_profile_location">Location</string>

  <!--Item Details Screen-->
  <string name="detail_toolbar_label">Detail News</string>
  <string name="item_comment_label">comments</string>
  <string name="item_image_change_link"><u>Change image</u></string>
  <string name="comment_hint">Write You comment</string>
  <string name="description_hint">Write You Description</string>
  <string name="title_hint">Write You Title</string>
  <string name="publish_button">Publish</string>
  <string name="count_likes" translatable="false">0</string>
  <string name="count_comments" translatable="false">0</string>
  <string name="status_news_active">Active</string>
  <string name="status_news_pending">Pending</string>

  <!--Change Password Screen-->
  <string name="change_toolbar_label">Change Password</string>
  <string name="hint_current_password">Current password</string>
  <string name="hint_new_password">New password</string>
  <string name="hint_new_password_again">New password again</string>
  <string name="change_password_error">Password has not updated</string>
  <string name="change_password_success">Password has  updated</string>
  <string name="input_curr_password_error">Wrong input current password</string>
  <string name="input_password_error">Wrong input new password</string>
  <string name="input_confirm_password_error">Wrong input confirm password</string>
  <string name="pass_confirm_password_error">New password and confirm password do not match</string>
  <string name="input_password_length_error">Length of password would not be less 6 symbols and Must contain at least one character</string>

  <!-- Strings related to Notification Enabled preference -->
  <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
  <string name="pref_enable_notifications_label">Push Notifications</string>
  <string name="pref_enable_notifications_true">Enabled</string>
  <string name="pref_enable_notifications_false">Not Enabled</string>
  <string name="pref_enable_notifications_default" translatable="false">true</string>

  <!--Button-->
  <string name="cancel_button">Cancel</string>
  <string name="save_button">Save</string>

  <!--Waring Dialog Start Screen-->
  <string name="emptyEmailError">Please enter e-mail</string>
  <string name="emptyPasswordError">Please enter password</string>
  <string name="emptyNameError">Please enter name</string>
  <string name="lengthPasswordError">Password should not be less than 6 symbols and Must contain at least one character</string>
  <string name="characterPasswordError">Passwords must have at least one lowercase (\'a\'-\'z\')</string>
  <string name="incorrectEmail">Incorrect e-mail address</string>
  <string name="incorrectName">Incorrect Name</string>
  <string name="incorrectPhone">Incorrect phone</string>
  <string name="incorrectPassword">Incorrect password</string>
  <string name="incorrectLoginDialog">Check e-mail and password! \n Try again!</string>
  <string name="no_internet_connection">No internet connection</string>
  <string name="server_error">Server Error</string>
  <string name="error_registration">Registration fail!</string>
  <string name="success_registration">Registration Success!</string>
  <string name="abuse_dialog"> <h><b>Write abuse</b></h> \n For removing this news, write abuse to admin!</string>

  <!--Dialog check button-->
  <string name="like" translatable="false">Like</string>
  <string name="dislike" translatable="false">Dislike</string>
  <string name="comment" translatable="false">Comment</string>
  <string name="edit" translatable="false">Edit</string>
  <string name="remove" translatable="false">Delete</string>
  <string name="item" translatable="false">Selected Item</string>

  <!-- Empty News Database -->
  <string name="empty_feed_list">No News Information Available.</string>

  <!--News Feed-->
  <string name="get_news_success">I get it! :)</string>
  <string name="get_news_error">I can get it! :(</string>
  <string name="set_like_success" translatable="false">I like/dislike it! </string>
  <string name="set_like_error" translatable="false">I can like/dislike it! </string>
  <string name="set_delete_success" translatable="false">You Post Abuse </string>
  <string name="set_delete_error" translatable="false">You do not  Post Abuse </string>
  <string name="set_good_by" translatable="false">By! </string>

  <!--Item Detail Dialog-->
  <string name="change_image" translatable="false">You invoke change image option</string>
  <string name="set_edit_success" translatable="false">You Updated News </string>
  <string name="set_edit_error">Please logout and authenticate again</string>
  <string name="set_add_comment_success" translatable="false">You Added Comment </string>
  <string name="add_news_success" translatable="false">You Add News </string>
  <string name="add_news_image">Select Your Image</string>

  <!--Abuse Dialog-->
  <string name="abuse_text_hint">Enter you message here</string>

  <!--Edit Profile Screen-->
  <string name="update_profile_success">Profile was updated</string>
  <string name="update_profile_error">Profile was not updated</string>

  <!--Search Screen Dialog-->
  <string name="search_error">News not found</string>

  <!-- Date format [CHAR LIMIT=NONE] -->
  <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

  <!-- Language-specific constants -->
  <string name="today" translatable="false">Today</string>

  <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
  <string name="yesterday" translatable="false">Yesterday</string>


  <!-- Tag format [CHAR LIMIT=NONE] -->
  <string name="format_tag" translatable="false"><xliff:g id="name"><u>#%1$s</u></xliff:g></string>

  <!-- For Shared Element Transitions -->
  <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>

  <!--TabHost-->
  <string name="tab_home">Home</string>
  <string name="tab_profile">Profile</string>
  <string name="tab_search">Search</string>


  <!-- AZURE configuration direct -->
  <string name="azure_direct_access_key" translatable="false">insert-access-key-here</string>
  <string name="azure_container" translatable="false">pictures</string>
  <string name="txt_acct_name" translatable="false">Account name</string>
  <string name="txt_access_key" translatable="false">Access Key</string>
  <string name="txt_container" translatable="false">Container</string>

  <!--Search Screen-->
  <string name="search_hint">search parameter</string>
  <string name="phone_number">Phone number</string>
  <string name="user_email">User email</string>
  <string name="user_name">User name</string>

  <!--Comment-->
  <string name="text_you_label">You</string>
</resources>
