<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/layout_input_email"
    style="@style/Widget.Design.TextInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/text_email"
      style="@android:style/TextAppearance.Widget.EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/layout_margin_8dp"
      android:layout_gravity="center"
      android:gravity="fill"
      android:hint="@string/email_required"
      android:inputType="textEmailAddress"
      android:textColor="@color/black" />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/layout_input_full_name"
    style="@style/Widget.Design.TextInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/text_full_name"
      style="@android:style/TextAppearance.Widget.EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/layout_margin_8dp"
      android:layout_gravity="center"
      android:gravity="fill"
      android:hint="@string/fullName"
      android:inputType="text"
      android:textColor="@color/black" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/layout_input_phone"
    style="@style/Widget.Design.TextInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/text_phone"
      style="@android:style/TextAppearance.Widget.EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/layout_margin_8dp"
      android:layout_gravity="center"
      android:gravity="fill"
      android:hint="@string/phone"
      android:inputType="phone"
      android:textColor="@color/black" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
    android:id="@+id/layout_input_password"
    style="@style/Widget.Design.TextInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/text_password"
      style="@android:style/TextAppearance.Widget.EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/layout_margin_8dp"
      android:layout_gravity="center"
      android:gravity="fill"
      android:hint="@string/password_required"
      android:inputType="textPassword"
      android:textColor="@color/black" />

  </android.support.design.widget.TextInputLayout>

</LinearLayout>