<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    android:id="@+id/item_my"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="8dp"
    app:columnCount="3">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        style="@style/AppTheme.Widget.InputCommentField"
        app:layout_columnSpan="3"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"

        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/list_item_description"
            style="@style/Widget.Design.DetailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="4"
            android:gravity="fill_horizontal"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:paddingTop="2dp"
            android:textColor="@color/app_black"
            />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        app:layout_columnWeight="1"
        app:layout_gravity="center"
        app:layout_rowSpan="2">

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:background="@drawable/ic_favorite_border_white_24dp"
            android:elevation="4dp"
            />

        <TextView
            android:id="@+id/list_item_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_vertical"
            android:text="0"
            android:textColor="@color/secondary_text"
            app:layout_gravity="right"
            tools:text="0"/>


    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2">

        <TextView
            android:id="@+id/change_image_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contextClickable="true"
            android:text="@string/item_image_change_link"
            android:textColor="@drawable/tab_text_link"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/list_item_comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                android:textColor="@drawable/tab_text_link"

                tools:text="0"/>

            <TextView
                android:id="@+id/item_comment_label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contextClickable="true"
                android:text="@string/item_comment_label"
                android:textColor="@drawable/tab_text_link"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
        app:layout_columnWeight="1"
        app:layout_gravity="center_vertical|right"
        app:layout_rowSpan="2"
        >


        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_delete_black_24dp"
            android:elevation="8dp"
            />


    </LinearLayout>


</android.support.v7.widget.GridLayout>